fix product height on small size

--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -296,10 +296,10 @@ body {
                     }
                     .art_desc_product_img {
                         // width: 0 !important;
-                        display: -webkit-box;
-                        display: -ms-flexbox;
-                        display: flex;
-                        outline: none;
+                        // display: -webkit-box;
+                        // display: -ms-flexbox;
+                        // display: flex;
+                        // outline: none;
                         // max-height: 0;
                         // overflow: hidden;
                         // &.slick-active {
